# probabilistic_ontology_engine_abductive

./: .gitignore  ARCHITECTURE_REVIEW.md  ASSIGNMENT_DIFFERENCE_AUDIT.md  AUDIT_EXECUTIVE_SUMMARY.md  CLAUDE.md  CONCEPT_CORRESPONDENCE_AUDIT.md  CONCEPT_QUALITY_REPORT.md  COST_AUDIT.md  COST_REVIEW.md  COVERAGE_ANALYSIS.md  DISAGREEMENT_ANALYSIS.md  DOMAIN_MODE_DISPLAY_AUDIT.md  EXPORT_MODE_IMPLEMENTATION_REPORT.md  FINAL_ONTOLOGY_DIVERGENCE_AUDIT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SEQUENCE.md  INDUCTION_ANALYSIS.md  INDUCTION_READINESS_REVIEW.md  MODE_PATH_AUDIT.md  MR_DYNAMIC_FEASIBILITY_AUDIT.md  MR_DYNAMIC_INDUCTION_PLAN.md  MVP0_SCOPE.md  NEXT.md  ONTOLOGY_DIFFERENCE_AUDIT.md  ONTOLOGY_INVENTORY.md  POE_A_BOUNDARY_AUDIT.md  POSTERIOR_SURFACE_AUDIT.md  QUERY_TEMPLATE_DESIGN.md  README.md  REPOSITORY_LAYOUT.md  RISK_REGISTER.md  ROADMAP_AUDIT.md  SHADOW_PREFILTER_EVALUATION.md  SNAPSHOT.md  SPEC.md  STRUCTURAL_DIFFERENCE_AUDIT.md  pyproject.toml
configs/: consolidation_map.yaml  induction_config.yaml
src/poea/: __init__.py  cli.py  llm.py
tests/: conftest.py  test_assignment_router.py  test_backend_interface.py  test_concept_inducer.py  test_concept_schema.py  test_evidence_loader.py  test_evidence_normalizer.py  test_export_nodes.py  test_pipeline.py  test_poe_adapter.py  test_prefilter_eval.py  test_registry_consolidation.py  test_registry_lifecycle.py  test_registry_schemas.py  test_reports.py  test_scorer.py  test_semantic_optimization.py
tests/fixtures/: sample_concepts_response.json  sample_evidence_annotated.json  (+1 more)
(+24 files in other folders)
